refactor: 코드 수정
- 빨간줄 뜨는 부분 수정